smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-unquoted-shape-id.smithy
// Error resolving shape target; Invalid shape ID: __$#

namespace foo.baz

metadata abc = __$#
